--- a/results.ipynb
+++ b/results.ipynb
@@ -1,59 +1,75 @@
 {
- "metadata": {
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.7.9-final"
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "name": "results.ipynb",
+      "provenance": [],
+      "collapsed_sections": []
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    }
   },
-  "orig_nbformat": 2,
-  "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3",
-   "language": "python"
-  }
- },
- "nbformat": 4,
- "nbformat_minor": 2,
- "cells": [
-  {
-   "source": [
-    "# Setting up the code\n",
-    "For installing the package please refer to the Readme file. Please note that the requirement is to have Linux or MAC OS. If you want to run the package  on Windows, you need to additonally install WSL2"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "source": [
-    "# Setting up the datasets for the job\n",
-    "For each dataset, you need to refer to each dataset folder in the preprocess/ directory. More information in Readme"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
-   "source": [
-    "#  Running the experiments\n",
-    "For each experiment we've listed the jobs and bash scripts that were used to run them. The code is quite complex and it's not possible to transfer those commmands easily to jupyter notebook.\n",
-    "\n",
-    "* first_run_qa.job - \n",
-    "* first_run.job - \n",
-    "* run_all_datasets_qa.job - \n",
-    "* run_all_datasets.job - \n",
-    "* run_all_non_english.sh -\n",
-    "* run_single_dataset_bc.job - \n",
-    "* run_single_dataset_qa.job - \n",
-    "* run_transformer_data_qa.job -  "
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  }
- ]
+  "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "vOYRRA9R66Ns"
+      },
+      "source": [
+        "# Setting up the environment \r\n",
+        "\r\n",
+        "Please refer to the installation procedure described in the README. \r\n",
+        "We recommend using the Docker file for setting up the environment as it's the least troublesome.\r\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "dunUdrn168GG"
+      },
+      "source": [
+        "#Setting up the datasets for the job\r\n",
+        "For each dataset you want to run experiments on, you need to run {dataset_name}.py script in the Transparencyp/reprocess. More information in README."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "SeqCF2GO682s"
+      },
+      "source": [
+        "#Running the experiments\r\n",
+        "For each experiment we've listed the jobs and bash scripts that were used to run them. The code is quite complex and it's not possible to transfer those commmands easily to jupyter notebook.\r\n",
+        "\r\n",
+        "## For reproducing the authors results run:\r\n",
+        "* first_run_qa.sh - \r\n",
+        "* first_run.sh - \r\n",
+        "* run_all_datasets_qa.sh - \r\n",
+        "* run_all_datasets.sh - \r\n",
+        "* run_single_dataset_bc.sh - \r\n",
+        "* run_single_dataset_qa.sh - \r\n",
+        "\r\n",
+        "\r\n",
+        "### Running the experiments for multinigual data:\r\n",
+        "* run_all_non_english.sh\r\n",
+        "\r\n",
+        "\r\n",
+        "## For performing the experiments on Transformer:\r\n",
+        "### All the experiments with settings from our paper:\r\n",
+        "``` python transformer_results.py --num_runs  5 ```\r\n",
+        "or with slurm systme run run_transformer_results.sh\r\n",
+        "\r\n",
+        "### Experiments per model type and dataset:\r\n",
+        "\r\n",
+        "```\r\n",
+        "model_t=\"diversity_weight\"\r\n",
+        "dataset_n=\"tweet\"\r\n",
+        "python ExperimentsTransformer.py --model_type ${model_t} --dataset_name ${dataset_n} \r\n",
+        "```"
+      ]
+    }
+  ]
 }
