--- a/results.ipynb
+++ b/results.ipynb
@@ -41,16 +41,18 @@
         "id": "SeqCF2GO682s"
       },
       "source": [
-        "#Running the experiments\r\n",
-        "For each experiment we've listed the jobs and bash scripts that were used to run them. The code is quite complex and it's not possible to transfer those commmands easily to jupyter notebook.\r\n",
+        "# Running the experiments\r\n",
+        "Specific instructions on how to run a single command can be found in the readme file. If you want to run the whole experiments please refer to the section below.\r\n",
+        "\r\n",
+        "For each experiment we've listed the bash scripts that were used to run them. The code is quite complex and it's not possible to transfer those commmands easily to jupyter notebook.\r\n",
         "\r\n",
         "## For reproducing the authors results run:\r\n",
-        "* first_run_qa.sh - \r\n",
-        "* first_run.sh - \r\n",
-        "* run_all_datasets_qa.sh - \r\n",
-        "* run_all_datasets.sh - \r\n",
-        "* run_single_dataset_bc.sh - \r\n",
-        "* run_single_dataset_qa.sh - \r\n",
+        "* first_run_qa.sh \r\n",
+        "* first_run.sh\r\n",
+        "* run_all_datasets_qa.sh\r\n",
+        "* run_all_datasets.sh\r\n",
+        "* run_single_dataset_bc.sh \r\n",
+        "* run_single_dataset_qa.sh \r\n",
         "\r\n",
         "\r\n",
         "### Running the experiments for multinigual data:\r\n",
